# src/routes/auth.route.ts
@@ -1,9 +1,10 @@
 import { Router } from 'express';
 import AuthController from '@controllers/auth.controller';
-import { CreateUserDto, LoginUserDto } from '@dtos/users.dto';
+import { CreateUserDto } from '@dtos/users.dto';
 import { Routes } from '@interfaces/routes.interface';
 import authMiddleware from '@middlewares/auth.middleware';
 import validationMiddleware from '@middlewares/validation.middleware';
+import { LoginUserDto } from '@/dtos/auth.dto';
 
 class AuthRoute implements Routes {
   public path = '/auth';
