# swagger.yaml
@@ -1,4 +1,19 @@
 paths:
+  /api/auth/login:
+    post:
+      tags:
+      - "auth"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        required: true
+        schema:
+          $ref: "#/definitions/LoginRequest"
+      responses:
+        default:
+         description: "successful"
   /api/booking:
     get:
       tags:
@@ -132,8 +147,8 @@ paths:
 
   /api/users:
     get:
-      # security:
-      #   - Bearer: []
+      security:
+        - Bearer: []
       tags:
       - "user-system"
       summary: "get all user system"
@@ -310,6 +325,13 @@ definitions:
         enum: [ "1", "2", "3"]
     xml:
       name: "UserSystem"
+  LoginRequest:
+    type: "object"
+    properties:
+      username:
+        type: "string"
+      password:
+        type: "string"
   ApiResponse:
     type: "object"
     properties:
